converted updateLinkByPageId to updatePageByPageId endpoint
